Quantum -> Neutron rename
Almost all references to quantum have been changed
neutron in tripleo-image-elements.

Change-Id: Ib17353d5834dd95d0348f62111074180c6e47181

--- a/bootstack-vm.yaml
+++ b/bootstack-vm.yaml
@@ -1,4 +1,4 @@
-Description: Nova API,Keystone,Heat Engine and API,Glance,Quantum,Dedicated MySQL
+Description: Nova API,Keystone,Heat Engine and API,Glance,Neutron,Dedicated MySQL
   server,Dedicated RabbitMQ Server
 HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
@@ -36,7 +36,7 @@ Resources:
   notcompute:
     Metadata:
       OpenStack::Heat::Stack: {}
-      Openstack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, heat-localip, quantum-network-node ]
+      Openstack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, heat-localip, neutron-network-node ]
       admin-password: unset
       admin-token: unset
       controller-address: 0.0.0.0
@@ -78,13 +78,13 @@ Resources:
         compute_driver: libvirt.LibvirtDriver
         db: mysql://nova:unset@localhost/nova
         host: 0.0.0.0
-      quantum:
+      neutron:
         floatingip_end: 192.0.2.64
         floatingip_range: 192.0.2.0/24
         floatingip_start: 192.0.2.45
         host: 0.0.0.0
         metadata_proxy_shared_secret: unset
-        ovs_db: mysql://quantum:unset@localhost/ovs_quantum?charset=utf8
+        ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
         ovs:
           public_interface: eth0
           fixed_range:
