--- a/notcompute.yaml
+++ b/notcompute.yaml
@@ -1,4 +1,4 @@
-Description: Nova API,Keystone,Heat Engine and API,Glance,Quantum,Dedicated MySQL
+Description: Nova API,Keystone,Heat Engine and API,Glance,Neutron,Dedicated MySQL
   server,Dedicated RabbitMQ Server
 HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
@@ -47,10 +47,10 @@ Parameters:
   NovaInterfaces:
     Default: eth0
     Type: String
-  QuantumDBPassword:
-    Description: Password for connecting to quantum database
+  NeutronDBPassword:
+    Description: Password for connecting to neutron database
     Type: String
-  QuantumInterfaces:
+  NeutronInterfaces:
     Default: eth0
     Type: String
   RabbitMQPassword:
@@ -107,9 +107,9 @@ Resources:
           - database: nova
             username: nova
             password: {Ref: NovaDBPassword}
-          - database: quantum
-            username: quantum
-            password: {Ref: QuantumDBPassword}
+          - database: neutron
+            username: neutron
+            password: {Ref: NeutronDBPassword}
       glance:
         db:
           Fn::Join:
@@ -157,15 +157,15 @@ Resources:
             - - 'mysql://nova:'
               - {Ref: NovaDBPassword}
               - '@127.0.0.1/nova'
-      quantum:
+      neutron:
         host:
           '127.0.0.1'
         ovs_db:
           Fn::Join:
             - ''
-            - - 'mysql://quantum:'
-              - {Ref: QuantumDBPassword}
-              - '@127.0.0.1/ovs_quantum'
+            - - 'mysql://neutron:'
+              - {Ref: NeutronDBPassword}
+              - '@127.0.0.1/ovs_neutron'
       rabbit:
         host:
           '127.0.0.1'
