--- a/nova-api.yaml
+++ b/nova-api.yaml
@@ -64,8 +64,8 @@ Resources:
         host: {Ref: KeystoneHost}
       nova:
         db: {Ref: NovaDSN}
-      quantum:
-        host: {Ref: QuantumHost}
+      neutron:
+        host: {Ref: NeutronHost}
       service-password: {Ref: ServicePassword}
       admin-password: {Ref: ServicePassword}
       rabbit:
