--- a/nova-compute-group.yaml
+++ b/nova-compute-group.yaml
@@ -17,7 +17,7 @@ Parameters:
   ServicePassword:
     Description: admin_password for setting up auth in nova.
     Type: String
-  QuantumHost:
+  NeutronHost:
     Type: String
   RabbitHost:
     Type: String
@@ -38,7 +38,7 @@ Parameters:
     Default: https://raw.github.com/stackforge/tripleo-heat-templates/master/nova-compute-instance.yaml
   NovaDSN:
     Type: String
-  QuantumDSN:
+  NeutronDSN:
     Type: String
 Resources:
   NovaCompute0:
@@ -50,7 +50,7 @@ Resources:
         KeyName: {Ref: KeyName}
         KeystoneHost: {Ref: KeystoneHost}
         ServicePassword: {Ref: ServicePassword}
-        QuantumHost: {Ref: QuantumHost}
+        NeutronHost: {Ref: NeutronHost}
         RabbitHost: {Ref: RabbitHost}
         RabbitPassword: {Ref: RabbitPassword}
         NovaInterfaces: {Ref: NovaInterfaces}
@@ -58,5 +58,5 @@ Resources:
         NovaApiHost: {Ref: NovaApiHost}
         GlanceHost: {Ref: GlanceHost}
         NovaDSN: {Ref: NovaDSN}
-        QuantumDSN: {Ref: QuantumDSN}
+        NeutronDSN: {Ref: NeutronDSN}
       TemplateURL: {Ref: NovaComputeTemplate}
