--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -17,7 +17,7 @@ Parameters:
   ServicePassword:
     Description: admin_password for setting up auth in nova.
     Type: String
-  QuantumHost:
+  NeutronHost:
     Type: String
   RabbitHost:
     Type: String
@@ -35,15 +35,15 @@ Parameters:
     Type: String
   NovaDSN:
     Type: String
-  QuantumDSN:
+  NeutronDSN:
     Type: String
-  QuantumBridgeMappings:
+  NeutronBridgeMappings:
     Type: String
-  QuantumNetworkVLANRanges:
+  NeutronNetworkVLANRanges:
     Type: String
-  QuantumNetworkType:
+  NeutronNetworkType:
     Type: String
-  QuantumEnableTunnelling:
+  NeutronEnableTunnelling:
     Type: String
 Resources:
   AccessPolicy:
@@ -86,15 +86,15 @@ Resources:
         host: {Ref: GlanceHost}
       keystone:
         host: {Ref: KeystoneHost}
-      quantum:
-        host: {Ref: QuantumHost}
-        ovs_db: {Ref: QuantumDSN}
+      neutron:
+        host: {Ref: NeutronHost}
+        ovs_db: {Ref: NeutronDSN}
         ovs:
           local_ip: 0.0.0.0
-          tenant_network_type: {Ref: QuantumNetworkType}
-          network_vlan_ranges: {Ref: QuantumNetworkVLANRanges}
-          bridge_mappings: {Ref: QuantumBridgeMappings}
-          enable_tunneling: {Ref: QuantumEnableTunnelling}
+          tenant_network_type: {Ref: NeutronNetworkType}
+          network_vlan_ranges: {Ref: NeutronNetworkVLANRanges}
+          bridge_mappings: {Ref: NeutronBridgeMappings}
+          enable_tunneling: {Ref: NeutronEnableTunnelling}
 
       service-password: {Ref: ServicePassword}
       admin-password: {Ref: ServicePassword}
