--- a/nova-compute.yaml
+++ b/nova-compute.yaml
@@ -16,7 +16,7 @@ Parameters:
   ServicePassword:
     Description: admin_password for setting up auth in nova.
     Type: String
-  QuantumHost:
+  NeutronHost:
     Type: String
   RabbitHost:
     Type: String
@@ -68,8 +68,8 @@ Resources:
         compute_driver: {Ref: NovaComputeDriver}
       keystone:
         host: {Ref: KeystoneHost}
-      quantum:
-        host: {Ref: QuantumHost}
+      neutron:
+        host: {Ref: NeutronHost}
       service-password: {Ref: ServicePassword}
       admin-password: {Ref: ServicePassword}
       rabbit:
