--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -35,7 +35,7 @@ Resources:
   notcompute:
     Metadata:
       OpenStack::Heat::Stack: {}
-      Openstack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, quantum-network-node ]
+      Openstack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, neutron-network-node ]
       admin-password: unset
       admin-token: unset
       controller-address: 0.0.0.0
@@ -95,9 +95,9 @@ Resources:
             key: /opt/stack/boot-stack/virtual-power-key
             ssh_host: 192.168.122.1
             type: virsh
-      quantum:
+      neutron:
         host: 127.0.0.1
-        ovs_db: mysql://quantum:unset@localhost/ovs_quantum?charset=utf8
+        ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
         ovs:
           dnsmasq_range: [192.0.2.25, 192.0.2.44]
           public_interface: eth0
