--- a/quantum.yaml
+++ b/quantum.yaml
@@ -1,5 +1,5 @@
 HeatTemplateFormatVersion: '2012-12-12'
-Description: 'Quantum'
+Description: 'Neutron'
 Parameters:
   KeyName: 
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
@@ -9,28 +9,28 @@ Parameters:
     Description: Use this flavor
     Type: String
     Default: bm.small
-  QuantumDSN:
-    Description: DSN for connecting to quantum database
+  NeutronDSN:
+    Description: DSN for connecting to neutron database
     Type: String
-  QuantumImage:
+  NeutronImage:
     Type: String
   KeystoneHost:
     Type: String
   ServicePassword:
-    Description: admin_password for setting up auth in quantum.
+    Description: admin_password for setting up auth in neutron.
     Type: String
   RabbitHost:
     Type: String
   RabbitPassword:
     Type: String
-  QuantumInterfaces:
+  NeutronInterfaces:
     Type: String
     Default: eth0
 Resources:
   AccessPolicy:
     Type: OS::Heat::AccessPolicy
     Properties:
-      AllowedResources: [ Quantum ]
+      AllowedResources: [ Neutron ]
   User:
     Type: AWS::IAM::User
     Properties:
@@ -40,16 +40,16 @@ Resources:
     Properties:
       UserName:
         Ref: User
-  Quantum:
+  Neutron:
     Type: AWS::EC2::Instance
     Properties:
       ImageId:
-        {Ref: QuantumImage}
+        {Ref: NeutronImage}
       InstanceType: {Ref: InstanceType}
       KeyName: {Ref: KeyName}
     Metadata:
       OpenStack::Role: networking
-      OpenStack::ImageBuilder::Elements: [ quantum ]
+      OpenStack::ImageBuilder::Elements: [ neutron ]
       heat: 
         access_key_id:
           Ref: Key
@@ -59,11 +59,11 @@ Resources:
           name: {Ref: 'AWS::StackName'}
           region: {Ref: 'AWS::Region'}
         refresh:
-          - resource: Quantum
+          - resource: Neutron
       keystone:
         host: {Ref: KeystoneHost}
-      quantum:
-        ovs_db: {Ref: QuantumDSN}
+      neutron:
+        ovs_db: {Ref: NeutronDSN}
       service-password: {Ref: ServicePassword}
       admin-password: {Ref: ServicePassword}
       rabbit:
@@ -73,4 +73,4 @@ Resources:
         store_user: ''
         store_key: ''
       interfaces:
-        control: {Ref: QuantumInterfaces}
+        control: {Ref: NeutronInterfaces}
