Provide values for all nova compute params needed.
Previously these would have to be set for overcloud at runtime, but we
have good sane defaults now, and for nova-compute-instance we are able
to feed them in using the appropriate references with Fn::GetAtt.

Change-Id: Idfff2885bf2afa58b2dec84f06639198e411eae2

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -1,4 +1,4 @@
-Description: Nova API,Keystone,Heat Engine and API,Glance,Quantum,Dedicated MySQL
+Description: Nova API,Keystone,Heat Engine and API,Glance,Neutron,Dedicated MySQL
   server,Dedicated RabbitMQ Server,Group of Nova Computes
 HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
@@ -13,13 +13,9 @@ Parameters:
   NovaComputeDriver:
     Default: libvirt.LibvirtDriver
     Type: String
-  NovaComputeTemplate:
-    Default: https://raw.github.com/stackforge/tripleo-heat-templates/master/nova-compute-instance.yaml
-    Type: String
-  NovaDSN:
-    Type: String
   NovaImage:
     Type: String
+    Default: overcloud-compute
   NovaInterfaces:
     Default: eth0
     Type: String
@@ -27,15 +23,9 @@ Parameters:
     Default: stack
     Description: What username to ssh to the virtual power host with.
     Type: String
-  QuantumDSN:
-    Type: String
-  RabbitPassword:
-    Type: String
-  ServicePassword:
-    Description: admin_password for setting up auth in nova.
-    Type: String
   notcomputeImage:
     Type: String
+    Default: overcloud-control
 Resources:
   AccessPolicy:
     Properties:
@@ -55,8 +45,16 @@ Resources:
         NovaApiHost: {"Fn::GetAtt": [notcompute, PrivateIp]}
         KeystoneHost: {"Fn::GetAtt": [notcompute, PrivateIp]}
         RabbitHost: {"Fn::GetAtt": [notcompute, PrivateIp]}
-        QuantumHost: {"Fn::GetAtt": [notcompute, PrivateIp]}
+        NeutronHost: {"Fn::GetAtt": [notcompute, PrivateIp]}
         GlanceHost: {"Fn::GetAtt": [notcompute, PrivateIp]}
+        NovaDSN: {"Fn::Join": ['', ['mysql://nova:unset@', {"Fn::GetAtt": [notcompute, PrivateIp]}, '/nova']]}
+        NeutronDSN: {"Fn::Join": ['', ['mysql://neutron:unset@', {"Fn::GetAtt": [notcompute, PrivateIp]}, '/neutron']]}
+        NeutronNetworkType: "gre"
+        NeutronEnableTunnelling: "True"
+        NeutronNetworkVLANRanges: ""
+        NeutronBridgeMappings: ""
+        RabbitPassword: "guest"
+        ServicePassword: "unset"
   User:
     Properties:
       Policies:
@@ -69,7 +67,7 @@ Resources:
       - boot-stack
       - heat-cfntools
       - heat-localip
-      - quantum-network-node
+      - neutron-network-node
       admin-password: unset
       admin-token: unset
       cinder:
@@ -111,7 +109,7 @@ Resources:
         compute_driver: libvirt.LibvirtDriver
         db: mysql://nova:unset@localhost/nova
         host: 0.0.0.0
-      quantum:
+      neutron:
         floatingip_end: 192.0.2.64
         floatingip_range: 192.0.2.0/24
         floatingip_start: 192.0.2.45
@@ -125,7 +123,7 @@ Resources:
           local_ip: 0.0.0.0
           public_interface: eth2
           tenant_network_type: gre
-        ovs_db: mysql://quantum:unset@localhost/ovs_quantum?charset=utf8
+        ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
       rabbit:
         host: 0.0.0.0
         password: guest
