overcloud-source: Fix overcloud parameters.
These values were missed in the initial overcloud-source.yaml.

nova.metadata-proxy is required to allow vms to communicate with the
EC2-style metadata service.

quantum.ovs.fixed_range constraints DHCP allocation for the undercloud,
but in the overcloud we do not want this constraint because the individual
subnets we define will do that. quantum.ovs.ovs_range configures the
range of ips that can be assigned to the tenant subnets.

Change-Id: If7191fa8baf1209ae33b9e8200f52ea0ade97810

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -109,6 +109,7 @@ Resources:
         compute_driver: libvirt.LibvirtDriver
         db: mysql://nova:unset@localhost/nova
         host: 0.0.0.0
+        metadata-proxy: true
       neutron:
         floatingip_end: 192.0.2.64
         floatingip_range: 192.0.2.0/24
@@ -117,9 +118,7 @@ Resources:
         metadata_proxy_shared_secret: unset
         ovs:
           enable_tunneling: 'True'
-          fixed_range:
-            end: 10.255.255.254
-            start: 10.0.0.2
+          ovs_range: 10.0.0.0/8
           local_ip: 0.0.0.0
           public_interface: eth2
           tenant_network_type: gre
