Reinstate architecture binding for nova-bm.
Per bug 1201656 (which this doesn't fix) nova-compute can only run one
bm arch from a single compute host.

Change-Id: I0eabe6e85ed388af111ef503882dfdf7959d8d97

--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -83,6 +83,7 @@ Resources:
           ram_allocation_ratio: 1.0
           reserved_host_memory_mb: 0
         baremetal:
+          arch: i386
           db: mysql://nova:unset@localhost/nova_bm
           power_manager: nova.virt.baremetal.virtual_power_driver.VirtualPowerManager
           pxe_deploy_timeout: 1200
