Migrate from cfn-hup to os-collect-config
Os-collect-config is meant to replace cfn-hup from heat-cfntools. It
allows pulling from multiple metadata sources and runs continuously.

Fixes bug #1211289

Change-Id: Ia4e9127fb79048bd1022b32a37272f8463a774ae

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -71,16 +71,14 @@ Resources:
       KeyName: {Ref: KeyName}
     Metadata:
       OpenStack::ImageBuilder::Elements: [ nova-compute ]
-      heat: 
-        access_key_id:
-          Ref: ComputeKey
-        secret_key:
-          Fn::GetAtt: [ ComputeKey, SecretAccessKey ]
-        stack:
-          name: {Ref: 'AWS::StackName'}
-          region: {Ref: 'AWS::Region'}
-        refresh:
-          - resource: NovaCompute0
+      os-collect-config:
+        cfn:
+          access_key_id:
+            Ref: ComputeKey
+          secret_access_key:
+            Fn::GetAtt: [ ComputeKey, SecretAccessKey ]
+          stack_name: {Ref: 'AWS::StackName'}
+          path: [ NovaCompute0.Metadata ]
       nova:
         compute_driver: {Ref: NovaComputeDriver}
         compute_libvirt_type: {Ref: NovaComputeLibvirtType}
