--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -96,9 +96,18 @@ Resources:
       glance:
         db: mysql://glance:unset@localhost/glance
         host: 0.0.0.0
+      os-collect-config:
+        cfn:
+          access_key_id:
+            Ref: Key
+          path: notcompute.Metadata
+          secret_access_key:
+            Fn::GetAtt:
+            - Key
+            - SecretAccessKey
+          stack_name:
+            Ref: AWS::StackName
       heat:
-        access_key_id:
-          Ref: Key
         admin_password: unset
         admin_tenant_name: service
         admin_user: heat
@@ -106,17 +115,6 @@ Resources:
         db: mysql://heat:unset@localhost/heat
         heat_watch_server_url: http://0.0.0.0:8003
         metadata_server_url: http://0.0.0.0:8000
-        refresh:
-        - resource: notcompute
-        secret_key:
-          Fn::GetAtt:
-          - Key
-          - SecretAccessKey
-        stack:
-          name:
-            Ref: AWS::StackName
-          region:
-            Ref: AWS::Region
         waitcondition_server_url: http://0.0.0.0:8000/v1/waitcondition
       interfaces:
         control: eth0
