--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -55,19 +55,17 @@ Resources:
         heat_watch_server_url: http://0.0.0.0:8003
         metadata_server_url: http://0.0.0.0:8000
         waitcondition_server_url: http://0.0.0.0:8000/v1/waitcondition
-        access_key_id:
-          Ref: Key
-        refresh:
-        - resource: notcompute
-        secret_key:
-          Fn::GetAtt:
-          - Key
-          - SecretAccessKey
-        stack:
-          name:
+      os-collect-config:
+        cfn:
+          access_key_id:
+            Ref: Key
+          path: Resources.notcompute
+          secret_access_key:
+            Fn::GetAtt:
+            - Key
+            - SecretAccessKey
+          stack_name:
             Ref: AWS::StackName
-          region:
-            Ref: AWS::Region
       interfaces:
         control: eth2
       keystone:
