Increase PXE deploy timeout.
Several users with slightly older hardware report the PXE deploy
process aborting deploys that were progressing fine. By increasing the
default PXE deploy timeout we should cater for this. A separate bug
has been filed in Nova/Ironic about the timeout being too simple.

Change-Id: I9e340fc7f928b32b1146ce758cda7180888d6cc9

--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -1,4 +1,4 @@
-Description: All-in-one baremetal OpenStack and all dependencies.
+escription: All-in-one baremetal OpenStack and all dependencies.
 HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
   InstanceType:
@@ -86,7 +86,7 @@ Resources:
           arch: i386
           db: mysql://nova:unset@localhost/nova_bm
           power_manager: nova.virt.baremetal.virtual_power_driver.VirtualPowerManager
-          pxe_deploy_timeout: 1200
+          pxe_deploy_timeout: 2400
           virtual_power:
             user:
               Ref: PowerUserName
