Set a physical bridge for network nodes.
The overcloud control plane needs to bring up an ovs bridge for the
ovs plugin hot-plugging and floating ip logic to work. The previous
in-instance script didn't migrate IP address and route information. We
can do that by using the core ovs script we wrote for baremetal setups
- triggered by setting the physical interface parameter.

Change-Id: I6d6b09140ee751371607c0963dc76cc5b95f7674

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -117,6 +117,7 @@ Resources:
           enable_tunneling: 'True'
           local_ip: 0.0.0.0
           public_interface: eth0
+          physical_bridge: br-ex
           tenant_network_type: gre
         ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
       rabbit:
