Add ability to set overcloud hypervisor type.
This is needed for non-nested-kvm capable environments.

Change-Id: I2b87071941c04d3c99a687082db42d2a84f481fd

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -29,6 +29,9 @@ Parameters:
   NovaComputeDriver:
     Type: String
     Default: libvirt.LibvirtDriver
+  NovaComputeLibvirtType:
+    Type: String
+    Default: null
   NovaApiHost:
     Type: String
   GlanceHost:
@@ -80,6 +83,7 @@ Resources:
           - resource: NovaCompute
       nova:
         compute_driver: {Ref: NovaComputeDriver}
+        compute_libvirt_type: {Ref: NovaComputeLibvirtType}
         db: {Ref: NovaDSN}
         host: {Ref: NovaApiHost}
       glance:
