Fix missing NovaComputeLibvirtType parameter.
Also change default to '' as null is not technically allowed as a
string default in cloudformation (Heat accidentally allows this).
Os-apply-config, via pystache, will still treat this as false for
the purposes of checking if it is set or not.

Change-Id: Ia02dbcf619bdc92647f1d21157fa4a8e3f749de3

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -31,7 +31,7 @@ Parameters:
     Default: libvirt.LibvirtDriver
   NovaComputeLibvirtType:
     Type: String
-    Default: null
+    Default: ''
   NovaApiHost:
     Type: String
   GlanceHost:
