--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -13,6 +13,9 @@ Parameters:
   NovaComputeDriver:
     Default: libvirt.LibvirtDriver
     Type: String
+  NovaComputeLibvirtType:
+    Default: ''
+    Type: String
   NovaImage:
     Type: String
     Default: overcloud-compute
