Correct os-collect-config.cfn.path to be string.
Specified as a list, it gets translated literally into
["NovaCompute0"] in /etc/os-collect-config.conf. This is not
desirable and results in 500 errors because ["NovaCompute0"] does
not exist.

Change-Id: I7dc01937d73c0c0e5cea70f5a3202d0e43c4caed

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -78,7 +78,7 @@ Resources:
           secret_access_key:
             Fn::GetAtt: [ ComputeKey, SecretAccessKey ]
           stack_name: {Ref: 'AWS::StackName'}
-          path: [ NovaCompute0.Metadata ]
+          path: NovaCompute0.Metadata
       nova:
         compute_driver: {Ref: NovaComputeDriver}
         compute_libvirt_type: {Ref: NovaComputeLibvirtType}
