Migrate nova-compute-instance to split Metadata.
The file was using the old 0.0.0.0 method from heat-localip, but it was
missed when converting the other templates to a split Metadata approach
to enable a machine to know its own IP.

Change-Id: I0b117de12416a52950b1c7079f659df8649d67f9

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -70,7 +70,6 @@ Resources:
       InstanceType: {Ref: InstanceType}
       KeyName: {Ref: KeyName}
     Metadata:
-      OpenStack::ImageBuilder::Elements: [ nova-compute ]
       os-collect-config:
         cfn:
           access_key_id:
@@ -78,7 +77,22 @@ Resources:
           secret_access_key:
             Fn::GetAtt: [ ComputeKey, SecretAccessKey ]
           stack_name: {Ref: 'AWS::StackName'}
-          path: NovaCompute0.Metadata
+          path: NovaCompute0Config.Metadata
+      OpenStack::ImageBuilder::Elements: [ nova-compute ]
+  NovaCompute0Config:
+    Type: AWS::AutoScaling::LaunchConfiguration
+    Properties:
+      InstanceType: '0'
+      ImageId: '0'
+    Metadata:
+      os-collect-config:
+        cfn:
+          access_key_id:
+            Ref: ComputeKey
+          secret_access_key:
+            Fn::GetAtt: [ ComputeKey, SecretAccessKey ]
+          stack_name: {Ref: 'AWS::StackName'}
+          path: NovaCompute0Config.Metadata
       nova:
         compute_driver: {Ref: NovaComputeDriver}
         compute_libvirt_type: {Ref: NovaComputeLibvirtType}
@@ -92,7 +106,10 @@ Resources:
         host: {Ref: NeutronHost}
         ovs_db: {Ref: NeutronDSN}
         ovs:
-          local_ip: 0.0.0.0
+          local_ip:
+            Fn::GetAtt:
+              - NovaCompute0
+              - PrivateIp
           tenant_network_type: {Ref: NeutronNetworkType}
           network_vlan_ranges: {Ref: NeutronNetworkVLANRanges}
           bridge_mappings: {Ref: NeutronBridgeMappings}
