--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -40,6 +40,7 @@ Resources:
     Properties:
       AllowedResources:
       - NovaCompute0
+      - NovaCompute0Config
     Type: OS::Heat::AccessPolicy
   Key:
     Properties:
@@ -56,10 +57,10 @@ Resources:
       Policies:
       - Ref: ComputeAccessPolicy
     Type: AWS::IAM::User
-  NovaCompute0:
+  NovaCompute0Config:
     Type: FileInclude
     Path: nova-compute-instance.yaml
-    SubKey: Resources.NovaCompute0
+    SubKey: Resources.NovaCompute0Config
     Parameters:
         NovaApiHost: {"Fn::GetAtt": [notcompute, PrivateIp]}
         KeystoneHost: {"Fn::GetAtt": [notcompute, PrivateIp]}
@@ -74,6 +75,10 @@ Resources:
         NeutronBridgeMappings: ""
         RabbitPassword: "guest"
         ServicePassword: "unset"
+  NovaCompute0:
+    Type: FileInclude
+    Path: nova-compute-instance.yaml
+    SubKey: Resources.NovaCompute0
   User:
     Properties:
       Policies:
