Make the keystone admin token configurable.
Because unique is good for auth secrets.

Change-Id: Iaadc102d11d68d7fc059e62bd992de7ee6f2c818

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -2,6 +2,10 @@ Description: Nova API,Keystone,Heat Engine and API,Glance,Neutron,Dedicated MySQ
   server,Dedicated RabbitMQ Server,Group of Nova Computes
 HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
+  AdminToken:
+    Default: unset
+    Description: The keystone auth secret.
+    Type: String
   InstanceType:
     Default: baremetal
     Description: Flavor to request when deploying.
@@ -97,7 +101,8 @@ Resources:
       - heat-localip
       - neutron-network-node
       admin-password: unset
-      admin-token: unset
+      admin-token:
+        Ref: AdminToken
       cinder:
         db: mysql://cinder:unset@localhost/cinder
         volume_size_mb: '5000'
