--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -1,6 +1,10 @@
 escription: All-in-one baremetal OpenStack and all dependencies.
 HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
+  AdminToken:
+    Default: unset
+    Description: The keystone auth secret.
+    Type: String
   InstanceType:
     Default: baremetal
     Description: Flavor to request when deploying.
@@ -41,7 +45,8 @@ Resources:
       OpenStack::Heat::Stack: {}
       Openstack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, neutron-network-node ]
       admin-password: unset
-      admin-token: unset
+      admin-token:
+        Ref: AdminToken
       controller-address:
         Fn::GetAtt:
           - notcompute
