Make admin-password configurable.
We use the admin password in in-instance scripts that configure e.g.
nagios from the cloud metadata, but production clouds will all have
unique passwords - it has to be a parameter.

Change-Id: I1f6c697ce27580fd669c7623e7fcea4c96ec62d0

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -2,6 +2,10 @@ Description: Nova API,Keystone,Heat Engine and API,Glance,Neutron,Dedicated MySQ
   server,Dedicated RabbitMQ Server,Group of Nova Computes
 HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
+  AdminPassword:
+    Default: unset
+    Description: The password for the keystone admin account, used for monitoring, querying neutron etc.
+    Type: String
   AdminToken:
     Default: unset
     Description: The keystone auth secret.
@@ -100,7 +104,8 @@ Resources:
       - heat-cfntools
       - heat-localip
       - neutron-network-node
-      admin-password: unset
+      admin-password:
+        Ref: AdminPassword
       admin-token:
         Ref: AdminToken
       cinder:
