--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -1,6 +1,10 @@
 escription: All-in-one baremetal OpenStack and all dependencies.
 HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
+  AdminPassword:
+    Default: unset
+    Description: The password for the keystone admin account, used for monitoring, querying neutron etc.
+    Type: String
   AdminToken:
     Default: unset
     Description: The keystone auth secret.
@@ -44,7 +48,8 @@ Resources:
     Metadata:
       OpenStack::Heat::Stack: {}
       Openstack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, neutron-network-node ]
-      admin-password: unset
+      admin-password:
+        Ref: AdminPassword
       admin-token:
         Ref: AdminToken
       controller-address:
