Add in Neutron service password.
The in-instance scripts are being fixed to not confuse the admin
password with the neutron service password.

Change-Id: I341574bb838a9563120791b9ac014d75274a96aa

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -18,6 +18,10 @@ Parameters:
     Default: default
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     Type: String
+  NeutronPassword:
+    Default: unset
+    Description: The password for the neutron service account, used by neutron agents.
+    Type: String
   NovaComputeDriver:
     Default: libvirt.LibvirtDriver
     Type: String
@@ -195,6 +199,8 @@ Resources:
           physical_bridge: br-ex
           tenant_network_type: gre
         ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
+        service-password:
+          Ref: NeutronPassword
       rabbit:
         host:
           Fn::GetAtt:
