--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -20,6 +20,10 @@ Parameters:
   Image:
     Default: undercloud
     Type: String
+  NeutronPassword:
+    Default: unset
+    Description: The password for the neutron service account, used by neutron agents.
+    Type: String
   PowerUserName:
     Default: stack
     Description: What username to ssh to the virtual power host with.
@@ -135,6 +139,8 @@ Resources:
           bridge_mappings: ctlplane:br-ctlplane
           tenant_network_type: vlan
           enable_tunneling: 'False'
+        service-password:
+          Ref: NeutronPassword
       rabbit:
         host: 127.0.0.1
         password: guest
