--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -1,4 +1,4 @@
-escription: All-in-one baremetal OpenStack and all dependencies.
+Description: All-in-one baremetal OpenStack and all dependencies.
 HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
   AdminPassword:
