Add cinder service-password.
The instance config is about to require this.

Change-Id: Ia778a7f5926b54758e73a4ee0940ef42fe5be6a9

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -10,6 +10,10 @@ Parameters:
     Default: unset
     Description: The keystone auth secret.
     Type: String
+  CinderPassword:
+    Default: unset
+    Description: The password for the cinder service account, used by cinder-api.
+    Type: String
   Flavor:
     Default: baremetal
     Description: Flavor to request when deploying.
@@ -115,6 +119,8 @@ Resources:
       cinder:
         db: mysql://cinder:unset@localhost/cinder
         volume_size_mb: '5000'
+        service-password:
+          Ref: CinderPassword
       controller-address:
         Fn::GetAtt:
           - notcompute
