Add Glance service password.
The in-instance scripts are about to require this.

Change-Id: I0260da5502639acc60b2791e9f957952f7ab5956

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -18,6 +18,10 @@ Parameters:
     Default: baremetal
     Description: Flavor to request when deploying.
     Type: String
+  GlancePassword:
+    Default: unset
+    Description: The password for the glance service account, used by the glance services.
+    Type: String
   KeyName:
     Default: default
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
@@ -132,6 +136,8 @@ Resources:
           Fn::GetAtt:
             - notcompute
             - PrivateIp
+        service-password:
+          Ref: GlancePassword
       os-collect-config:
         cfn:
           access_key_id:
