--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -13,6 +13,10 @@ Parameters:
     Default: baremetal
     Description: Flavor to request when deploying.
     Type: String
+  GlancePassword:
+    Default: unset
+    Description: The password for the glance service account, used by the glance services.
+    Type: String
   KeyName:
     Default: default
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
@@ -67,6 +71,8 @@ Resources:
       glance:
         db: mysql://glance:unset@localhost/glance
         host: 127.0.0.1
+        service-password:
+          Ref: GlancePassword
       heat:
         admin_password: unset
         admin_tenant_name: service
